--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.21.2"
   },
   "devDependencies": {
